--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <div id="character-selection">
         <h2>Escolha o seu Personagem</h2>
         <div id="character-list"></div>
+        <div id="upgrade-selection" style="display: none;">
+    <h2>Escolha um Upgrade</h2>
+    <div id="upgrade-list"></div>
+</div>
+
     </div>
     <script type="module" src="js/main.js"></script>
 </body>
